--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,130 +1,241 @@
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	text-decoration: none;
-	font-family: 'Montserrat', sans-serif;
-	font-optical-sizing: auto;
-	font-style: normal;
-	scroll-behavior: smooth;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  scroll-behavior: smooth;
 }
 html {
-	scroll-padding-top: 100px;
+  scroll-padding-top: 110px;
 }
 body {
-	max-width: 430px;
-	margin: 0 auto;
+  max-width: 430px;
+  margin: 0 auto;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
 }
 header {
-	background-color: white;
+  background-color: white;
 }
 .header_logo {
-	max-width: 335px;
-	margin: 0px auto;
+  max-width: 335px;
+  margin: 0px auto;
 }
 
-main {
-	background-color: #24272b;
-	padding: 22px 19px 16px 19px;
+.main_window {
+  background-color: #24272b;
+  padding: 22px 19px 16px 19px;
 }
 
 .main_categories {
-	display: flex;
-	max-width: 365px;
-	justify-content: space-between;
-	margin: 0 auto;
-	margin-bottom: 25px;
-	align-items: center;
-	position: sticky;
-	top: 10px;
-	z-index:10;
+  display: flex;
+  max-width: 389px;
+  justify-content: space-between;
+  margin: 0 auto;
+  margin-bottom: 17px;
+  align-items: center;
+  position: sticky;
+  top: 10px;
+  z-index: 10;
 }
 
 .category {
-	color: #fff;
-	font-weight: 400;
-	font-size: 14px;
-	cursor: pointer;
-	background-color: #24272b;
-	padding: 10px 10px;
-	border-radius: 20px;
-	z-index: 10;
+  color: #fff;
+  font-weight: 400;
+  font-size: 14px;
+  cursor: pointer;
+  background-color: #24272b;
+  padding: 10px 10px;
+  border-radius: 20px;
+  z-index: 10;
 }
 
 .category_on_active {
-	background: rgba(255, 255, 255, 1);
-	border-radius: 25px;
-	max-width: 117px;
-	padding: 11px 9px 13px 9px;
-	font-weight: 500;
-	color: #000;
-	animation: in 500ms ease;
+  background: rgba(255, 255, 255, 1);
+  border-radius: 25px;
+  max-width: 117px;
+  padding: 11px 9px 13px 9px;
+  font-weight: 500;
+  color: #000;
+  animation: in 500ms ease;
 }
 
 @keyframes in {
-	0% {
-		background: rgba(255, 255, 255, 0);
-	}
-	100% {
-		background: rgba(255, 255, 255, 1);
-	}
+  0% {
+    background: rgba(255, 255, 255, 0);
+  }
+  100% {
+    background: rgba(255, 255, 255, 1);
+  }
 }
 
 .showcase_goods {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-gap: 23px 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 23px 20px;
 }
 
 .card_good {
-	background-color: #fff;
-	max-width: 186px;
-	border-radius: 13px;
-	padding: 22px 17px;
-	cursor: pointer;
-	transition: scale 300ms ease;
+  background-color: #fff;
+  max-width: 186px;
+  border-radius: 13px;
+  padding: 22px 17px;
+  cursor: pointer;
+  transition: scale 300ms ease;
 }
 
 .card_good:hover {
-	scale: 1.05;
+  scale: 1.05;
 }
 
 .card_title {
-	font-size: 20px;
-	font-weight: 600;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .img_cappuccino {
-	max-width: 142px;
-	margin: 39px auto 23px auto;
+  max-width: 122px;
+  margin: 30px auto 10px auto;
 }
 .img_cappuccino img {
-	width: 100%;
+  width: 100%;
 }
 .card_price_volume {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
 }
 
 #card_price {
-	font-size: 16px;
-	font-weight: 600;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 #card_volume {
-	font-size: 10px;
-	font-weight: 300;
+  font-size: 10px;
+  font-weight: 300;
 }
 
 .showcase_title {
-	font-size: 22px;
-	font-weight: 700;
-	color: #fff;
-	margin: 15px 0 15px 10px;
+  font-size: 22px;
+  font-weight: 700;
+  color: #fff;
+  margin: 19px 0 8px 10px;
 }
 @media screen and (max-width: 370px) {
-	.category {
-		font-size: 12px;
-	}
+  .category {
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .card_count_of_goods {
+    padding: 2px 19px;
+  }
+
+  .showcase_goods {
+    grid-gap: 16px 8px;
+  }
+
+  .card_count_of_goods {
+    padding: 2px 19px;
+  }
+}
+
+.search {
+  max-width: 389px;
+  margin-bottom: 14px;
+  display: none;
+}
+
+.search input {
+  position: relative;
+  outline: none;
+  border: none;
+  padding: 13px 13px 13px 55px;
+  border-radius: 25px;
+  width: 100%;
+  font-size: 14px;
+  font-weight: 500;
+  color: #878787;
+}
+
+.search_img {
+  position: absolute;
+  z-index: 1;
+  fill: #878787;
+  top: 134px;
+  left: 586px;
+}
+
+.add_shopping_cart {
+  max-width: 152px;
+  margin: 0 auto;
+}
+
+.add_shopping_cart span {
+  font-size: 14px;
+  font-weight: 400;
+  padding: 6px 41px;
+  border: 1px solid #f9f9f9;
+  border-radius: 5px;
+  box-shadow: 0 0 2.2px 0 rgba(0, 0, 0, 0.46);
+  line-height: 30px;
+}
+
+/* анимация при наведении на кнопку добавить, на любителя */
+/* .add_shopping_cart span:hover {
+  background-color: #878787;
+  color: #fff;
+  transition: all 300ms ease-in-out;
+} */
+
+.card_count_of_goods {
+  display: flex;
+  align-items: center;
+  max-width: 155px;
+  justify-content: space-between;
+  padding: 0 24px;
+  border: 1px solid #f9f9f9;
+  border-radius: 5px;
+  box-shadow: 0 0 2.2px 0 rgba(0, 0, 0, 0.46);
+}
+
+#countGoods {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.card_count_of_goods:nth-child(1) {
+  max-width: 14px;
+}
+
+.count_minus {
+  height: 28px;
+}
+
+.go_basket {
+  background-color: #fff;
+  position: sticky;
+  bottom: 0;
+  padding: 22px 18px 22px 17px;
+  border-radius: 14px 14px 0 0;
+}
+
+.go_basket button {
+  border: 1px solid #000;
+  font-size: 20px;
+  font-weight: 600;
+  color: #fff;
+  background-color: #000;
+  padding: 20px 92px;
+  border-radius: 13px;
 }
