--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,6 +250,7 @@ header {
   border: none;
   border-radius: 10px 10px 0px 0px;
   margin-top: 100px;
+  height:650px;
 }
 #shopCart::backdrop{
   background-color: rgba(0, 0, 0, 0.7);
@@ -289,6 +290,7 @@ background: #fff;
 border-radius: 13px;
 margin: 0 auto;
 margin-top: 30px;
+  column-gap:10px;
 }
 .items{
   width: 89px;
