--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ html {
 }
 
 /*НОвая залупа*/
-/*Егор пидорас тупой негр*/
+/*Егор пидорас тупой негр даун*/
 body {
 	max-width: 430px;
 	margin: 0 auto;
