--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,6 @@ html {
 	scroll-padding-top: 110px;
 }
 
-/*НОвая залупа*/
-/*Егор пидорас тупой негр*/
 body {
 	max-width: 430px;
 	margin: 0 auto;
@@ -29,6 +27,13 @@ body {
 	-ms-user-select: none;
 	/* Internet Explorer/Edge */
 	user-select: none;
+}
+
+.dialog-open {
+	overflow: hidden;
+	position: fixed;
+	width: 100%;
+	height: 100%;
 }
 
 header {
